# NetworkGamePractice

./: .gitignore  README.md  config.json
Client/: CMakeLists.txt  Client.filters
Client/shaders/: ObjectVertexShader.glsl  TextVertexShader.glsl
Client/src/: Ball.cpp  Block.cpp  Game.cpp  Game.h  GameMode.h  GameModeManager.cpp  GameModeManager.h  GameMode_Lobby.cpp  GameMode_Lobby.h  GameMode_Local.cpp  GameMode_Local.h  GameMode_Online.cpp  GameMode_Online.h  GameObject.cpp  GameObject.h  GameState.h  GameState_Lobby.cpp  GameState_Lobby.h  GameState_Local.cpp  GameState_Local.h  GameState_Online.cpp  GameState_Online.h  Graphics.cpp  Graphics.h  Net.cpp  Net.h  Player.cpp  Player.h  main.cpp
NetworkGamePractice/: CMakeLists.txt  main.cpp
NetworkGamePractice/lib/: freetype.lib
NetworkGamePractice/shaders/: ObjectFragmentShader.glsl  TextFragmentShader.glsl
NetworkGamePractice/src/: Ball.cpp  Ball.h  Block.cpp  Block.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  Net.cpp  Net.h  Player.cpp  Player.h  main.cpp
Server/: CMakeLists.txt  config.json
Server/src/: Ball.cpp  Block.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Main.cpp  Net.cpp  Player.cpp  Player.h  Server.cpp  Server.h
include/Shared/: SharedData.h
